--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "react-dom": "^19.1.1",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
+    "react-is": "^19.1.1",
     "react-router-dom": "^7.9.1",
     "react-toast": "^1.0.3",
     "react-window": "^1.8.10",
+    "recharts": "^3.2.1",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.13"
   },
