--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "clsx": "^2.1.1",
     "dexie": "^4.2.0",
     "lucide-react": "^0.544.0",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-is": "^19.1.1",
