--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dexie": "^4.2.0",
     "lucide-react": "^0.544.0",
     "react": "18.3.1",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "18.3.1",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
